Add reinforcement overlay to all blocks when a reinforcement is present, improve item texture Credit for the reinforcement overlay and reinforcement item textures goes to @GreenForzeGaming